--- a/src/main/resources/templates/pendidikan/pendidikan.html
+++ b/src/main/resources/templates/pendidikan/pendidikan.html
@@ -14,21 +14,29 @@
 	<div class="col-12">
 		<div class="card">
 			<div class="card-header bg-warning">
-				<h3 class="card-title" style="font-family:SFMono-Regular;font-size:20px">ID Person</h3><br>
-				<input class="col-10" type="text" id="idPerson" name="idPerson" placeholder="ID Person" th:value="${idPerson}" disabled required>
+<!--				<h3 class="card-title" style="font-family:SFMono-Regular;font-size:20px">ID Person</h3><br>-->
+				<input class="form-control" type="text" id="idPerson" name="idPerson" placeholder="ID Person" th:value="${idPerson}" disabled required>
+				<button class="float-right bg-danger" id="btn-cari-biodata">Cari Data</button>
 				<button class="float-right bg-navy" id="btn-tambah-biodata">Tambah</button>
 			</div>
 			<div class="card-body bg-gray">
 				<table class="table table-striped table-bordered table-hover nowrap bg-white" id="tableBiodata" style="width:100%"></table>
 				<button class="float-right bg-navy" id="btn-save-biodata">Save</button>
+<!--				<a class="float-right w3-button bg-danger" href="/pendidikan/">Cancel</a>-->
 				<button class="float-right bg-danger" id="btn-cancel-biodata">Cancel</button>
 			</div>
-			
+			<div class="bg-gray">
+				<a class="float-right w3-button bg-navy text-white" href="/pendidikan">Refresh</a>
+				<a class="float-left w3-button bg-danger text-bold" href="/dashboard">Back Home</a>
+<!--				<a href="/pendidikan" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: medium">Refresh</a>-->
+			</div>
+
 		</div>
 	</div>
 	
 	<div class="modal fade" id="modal-biodata">
 		<div class="modal-dialog modal-lg">
+			<table class="table table-striped table-bordered table-hover nowrap bg-white" id="tablePendidikan" style="width:100%"></table>
 			<div class="modal-content">
 				<div class="modal-header bg-warning">
 					<h4 class="modal-title"> Form Jenjang Pendidikan</h4>
@@ -41,12 +49,8 @@
 					<div class="card-header">
 					</div>
 					<form id="form-biodata" role="form">
-						<input name="id" type="hidden"/>
-						
-						<!-- <div class="form-group">
-							<label>Id Person</label>
-							<input class="form-control" id="idPerson" name="idPerson" placeholder="id person" required type="text">
-						</div> -->
+						<input name="idPerson" id="idPerson" type="hidden"/>
+						<input name="idBio" id="idBio" type="hidden"/>
 						<fieldset class="fieldset">
 						<div class="form-group">
 							<label>Jenjang</label>
@@ -59,7 +63,6 @@
 								<option value="S2">S2</option>
 								<option value="S3">S3</option>
 							</select>
-							<!-- <input class="form-control" id="jenjang" name="jenjang" placeholder="jenjang" required type="text"> -->
 						</div>
 						
 						<div class="form-group">
@@ -93,6 +96,7 @@
     <script th:src="@{/js/datapendidikan.js}"></script>
 
     <script>
+		tablePendidikan.create();
        	var dataPen=[];
     	var newrow=-1;
 	    $('#btn-tambah-biodata').click(function () {
@@ -116,6 +120,14 @@
             formBiodata.saveForm();
             $('input[name=idPerson]').val(' ');
         })
+
+		$('#btn-cari-biodata').click(function () {
+			tablePendidikan.create();
+		})
+
+		$('#btn-close-pendidikan').click(function () {
+			tablePendidikan.remove();
+		})
 
     </script>
 </th:block>
