react js + navbar

--- a/src/main/resources/templates/dashboard/dataperson.html
+++ b/src/main/resources/templates/dashboard/dataperson.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorate="~{base}" 
+<html layout:decorate="~{base}"
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	xmlns:th="http://www.thymeleaf.org">
@@ -14,7 +14,7 @@
 	<div class="col-12">
 		<div class="card">
 			<div class="card-header">
-				<h3 class="card-title">Biodata Person</h3>
+				<h3 class="card-title">Biodata DataPerson</h3>
 				<button class="float-right btn-primary" id="btn-tambah-biodata">Tambah</button>
 			</div>
 			<div class="card-body table-responsive">
