--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-
-<title>Data DataPerson</title>
-<!-- Tell the browser to be responsive to screen width -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Font Awesome -->
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <title>Data DataPerson</title>
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Font Awesome -->
     <link rel="stylesheet" th:href="@{/plugins/fontawesome-free/css/all.min.css}">
-<!-- overlayScrollbars -->
+    <!-- overlayScrollbars -->
     <link rel="stylesheet" th:href="@{/plugins/overlayScrollbars/css/OverlayScrollbars.min.css}">
-<!-- Ionicons -->
+    <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<!-- DataTables -->
+    <!-- DataTables -->
     <link rel="stylesheet" th:href="@{/plugins/datatables-bs4/css/dataTables.bootstrap4.css}">
- <!-- Select2 -->
+    <!-- Select2 -->
     <link rel="stylesheet" th:href="@{/plugins/select2/css/select2.min.css}">
     <link rel="stylesheet" th:href="@{/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css}">
     <link href="https://unpkg.com/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker3.min.css" rel="stylesheet">
-<!-- Theme style -->
+    <!-- Theme style -->
     <link rel="stylesheet" th:href="@{/dist/css/adminlte.min.css}">
-<!-- Google Font: Source Sans Pro -->
+    <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-<style>
+    <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+            crossorigin="anonymous"
+    />
+    <style>
         input.parsley-success,
         select.parsley-success,
         textarea.parsley-success {
@@ -68,7 +73,7 @@
 
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
- <!-- Navbar -->
+    <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-dark bg-navy">
         <!-- Left navbar links -->
         <ul class="navbar-nav">
@@ -86,7 +91,7 @@
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper bg-white">
-  		<!-- Content Header (Page header) -->
+        <!-- Content Header (Page header) -->
         <div class="content-header">
             <div class="container-fluid" >
                 <div layout:fragment="content-header"/>
@@ -98,17 +103,17 @@
         <div class="content">
             <div class="container-fluid">
                 <div layout:fragment="content-body"/></div>
-            </div>
         </div>
-        <!-- /.content -->
     </div>
-    <!-- /.content-wrapper -->
+    <!-- /.content -->
+</div>
+<!-- /.content-wrapper -->
 
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-        <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
+<!-- Control Sidebar -->
+<aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+</aside>
+<!-- /.control-sidebar -->
 
 
 </div>
@@ -128,7 +133,7 @@
 <script th:src="@{/plugins/datatables/jquery.dataTables.js}"></script>
 <script th:src="@{/plugins/datatables-bs4/js/dataTables.bootstrap4.js}"></script>
 <script th:src="@{/plugins/datatables-responsive/js/dataTables.responsive.min.js}"></script>
- <script th:src="@{/plugins/datatables-responsive/js/responsive.bootstrap4.js}"></script>
+<script th:src="@{/plugins/datatables-responsive/js/responsive.bootstrap4.js}"></script>
 <!-- SurveyJs-->
 <!--<script src="https://surveyjs.azureedge.net/1.1.24/survey.jquery.min.js"></script>-->
 <!-- AdminLTE -->
