--- a/src/main/resources/templates/pendidikan/pendidikan.html
+++ b/src/main/resources/templates/pendidikan/pendidikan.html
@@ -14,8 +14,8 @@
 	<div class="col-12">
 		<div class="card">
 			<div class="card-header bg-warning">
-<!--				<h3 class="card-title" style="font-family:SFMono-Regular;font-size:20px">ID Person</h3><br>-->
-				<input class="form-control" type="text" id="idPerson" name="idPerson" placeholder="ID Person" th:value="${idPerson}" disabled required>
+<!--				<h3 class="card-title" style="font-family:SFMono-Regular;font-size:20px">ID DataPerson</h3><br>-->
+				<input class="form-control" type="text" id="idPerson" name="idPerson" placeholder="ID DataPerson" th:value="${idPerson}" disabled required>
 				<button class="float-right bg-danger" id="btn-cari-biodata">Cari Data</button>
 				<button class="float-right bg-navy" id="btn-tambah-biodata">Tambah</button>
 			</div>
