--- a/src/main/resources/templates/person/get.html
+++ b/src/main/resources/templates/person/get.html
@@ -6,7 +6,7 @@
 
 <div class="row mb-2" layout:fragment="content-header">
 	<div class="col-sm-6">
-		<h1 class="m-0 text-dark" style="font-family:SFMono-Regular; font-size:30px">Data Person</h1>
+		<h1 class="m-0 text-dark" style="font-family:SFMono-Regular; font-size:30px">Data DataPerson</h1>
 	</div>
 </div>
 
