--- a/src/main/resources/templates/person/person.html
+++ b/src/main/resources/templates/person/person.html
@@ -14,7 +14,7 @@
     <div class="col-12">
 		<div class="card">
 			<div class="card-header bg-warning">
-				<h3 class="card-title" style="font-family:SFMono-Regular;font-size:22px">Biodata Person</h3>
+				<h3 class="card-title" style="font-family:SFMono-Regular;font-size:22px">Biodata DataPerson</h3>
 				<button class="float-right bg-navy" id="btn-tambah-biodata">Tambah</button>
 			</div>
 			<div class="card-body table-responsive bg-gray">
