--- a/src/main/resources/static/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.scss
+++ b/src/main/resources/static/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.scss
@@ -123,7 +123,7 @@ $bootstrap-custom-range-thumb-focus-box-shadow-width: $bootstrap-input-focus-wid
 $bootstrap-custom-range-thumb-active-bg: lighten($bootstrap-primary, 35%) !default;
 $bootstrap-custom-range-thumb-disabled-bg: $bootstrap-gray-500 !default;
 
-// Toast
+// MyToast
 $bootstrap-toast-max-width:                   350px !default;
 $bootstrap-toast-padding-x:                   .75rem !default;
 $bootstrap-toast-padding-y:                   .25rem !default;
